--- a/templates/teacher/teacherdashboard.html
+++ b/templates/teacher/teacherdashboard.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="./main.css">
+<!--    <link rel="stylesheet" href="./main.css">-->
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>-->
     <script src="https://cdn.tailwindcss.com"></script>
+
+
 
 </head>
 
@@ -135,8 +140,8 @@
         const targetElement = document.querySelector(targetSelector);
         if (targetElement) {
             window.scrollTo({
-            top: targetElement.offsetTop,
-            behavior: 'smooth'
+                top: targetElement.offsetTop,
+                behavior: 'smooth'
             });
         }
     }
@@ -183,5 +188,5 @@
 </script>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+
 </body>
