--- a/templates/student/studentdashboard.html
+++ b/templates/student/studentdashboard.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
-
+    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
+<!--    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_.css')}}">-->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
