--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -13,24 +13,9 @@
 					<h1><a href={{url_for('homepage')}}>KYUBEE</a> </h1>
 					<nav id="nav">
 						<ul>
-							<li><a href={{ url_for('homepage')}}>Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="{{ url_for('generic') }}">About Us</a></li>
-									<li><a href="{{ url_for('contact_page') }}">Contact</a></li>
-									<li><a href="{{ url_for('elements') }}">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
+							<li><a href="{{ url_for('homepage')}}">Home</a></li>
+							<li><a href="{{ url_for('generic') }}">About Us</a></li>
+							<li><a href="{{ url_for('contact_page') }}">Contact</a></li>
 							<li><a href="{{ url_for('login') }}" class="button">Sign In</a></li>
 						</ul>
 					</nav>
