--- a/templates/student/studentnotesearch.html
+++ b/templates/student/studentnotesearch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Teacher Dashboard</title>
+    <title>Search Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
@@ -162,7 +162,7 @@
             button.textContent = 'Open';
             button.classList.add('text-white', 'absolute', 'right-2.5', 'bottom-2.5', 'bg-blue-700', 'hover:bg-blue-800', 'focus:ring-4', 'focus:outline-none', 'focus:ring-blue-300', 'font-medium', 'rounded-lg', 'text-sm', 'px-4', 'py-2', 'dark:bg-blue-600', 'dark:hover:bg-blue-700', 'dark:focus:ring-blue-800');
             button.addEventListener('click', () => {
-                window.open('/qp-display?pdf=' + uuid, '_blank');
+                window.open('/notes-display?pdf=' + uuid, '_blank');
             });
 
             div.appendChild(title);
