--- a/templates/student/studentprofilepage.html
+++ b/templates/student/studentprofilepage.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Drag and Drop File Upload</title>
+    <title>Student Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
      <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -44,12 +43,12 @@
                     </li>
 
                     <li>
-                        <a href="#"
+                        <a href="{{ url_for('student_generate_paper') }}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate Paper</a>
                     </li>
 
                     <li>
-                        <a href="#"
+                        <a href="{{ url_for('student_notes_search') }}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Search Notes</a>
                     </li>
 
