Pdf Reader to OCR

--- a/templates/teacher/questionpaperupload.html
+++ b/templates/teacher/questionpaperupload.html
@@ -168,7 +168,8 @@
                 {% for question in questions_list %}
                 {% if question|trim != '' %}
                 <div class="container1">
-                    <input name="{{ question }}" class="question" value="{{ question }}">
+<!--                    <input name="{{ question }}" class="question" value="{{ question }}">-->
+                    <span class="question">{{ question }}</span>
                     <div class="buttons">
                         <select name="{{ question }}-marks">
                             <option selected disabled>Select Marks</option>
@@ -202,9 +203,9 @@
                 {% endfor %}
 
                 <input type="submit" id="submit-question" name="submit-question"
-                        class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium   rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                       class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium   rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             </form>
-                   </div>
+        </div>
     </div>
 </main>
 
@@ -214,6 +215,7 @@
         removeButtons.forEach(button => {
             button.addEventListener('click', function() {
                 const container = button.closest('.container1');
+                const questionId = container.getAttribute('data-question-id');
                 container.remove();
             });
         });
