--- a/templates/student/studentdashboard.html
+++ b/templates/student/studentdashboard.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
-<!--    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_.css')}}">-->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </head>
 
 <body class="bg-cover bg-center bg-no-repeat"
